# vibe-pos

./: README.md  eslint.config.mjs  package-lock.json  package.json  test_product.js  wdio.conf.mjs
.agents/rules/: backend.md  component.md
.github/workflows/: main.yml
e2e/specs/: example.e2e.js  export.e2e.js  insert.e2e.js  ui.e2e.js
src-tauri/: Cargo.toml  README.md  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/database/: Cargo.toml  README.md  database.db
src-tauri/database/migrations/2025-11-13-084410-0000_Receipt/: up.sql
src-tauri/database/migrations/2026-02-15-204414-0000_create_images_table/: up.sql
src-tauri/database/migrations/2026-02-15-214241-0000_create_product_images_table/: up.sql
src-tauri/database/migrations/2026-02-19-000000_add_quantity_to_stock/: down.sql  up.sql
src-tauri/database/migrations/2026-02-20-123825-0000_update_categories/: down.sql  up.sql
src-tauri/database/migrations/2026-02-20-141645-0000_schema_redesign/: down.sql  up.sql
src-tauri/database/migrations/2026-02-21-000000_create_customer/: down.sql  up.sql
src-tauri/database/migrations/2026-02-22-000000_add_unit_to_recipe_item/: down.sql  up.sql
src-tauri/database/src/: connection.rs  image.rs  lib.rs  product_image.rs  schema.rs
src-tauri/database/src/category/: mod.rs
src-tauri/database/src/customer/: mod.rs  model.rs
src-tauri/database/src/image/: mod.rs  model.rs
src-tauri/database/src/material/: mod.rs  model.rs  schema.rs
src-tauri/database/src/product/: mod.rs  model.rs  schema.rs
src-tauri/database/src/product_image/: mod.rs  model.rs
src-tauri/database/src/receipt/: mod.rs  model.rs  schema.rs
src-tauri/database/src/recipe/: mod.rs  model.rs  schema.rs
src-tauri/database/src/stock/: mod.rs  model.rs  schema.rs
src-tauri/database/tests/: sqlcipher_encryption.rs
src-tauri/export_lib/: Cargo.toml
src-tauri/export_lib/src/: csv_export.rs  lib.rs  ods_export.rs  thai_accounting.rs  xlsx_export.rs
src-tauri/image_lib/: Cargo.toml
src-tauri/image_lib/src/: lib.rs
src-tauri/src/: lib.rs
src-tauri/src/commands/: category.rs  customer.rs  database.rs  export.rs  images.rs  material.rs  mod.rs  product.rs  receipt.rs  recipe.rs  settings.rs  stock.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/: Cart.tsx  DatabaseGuard.tsx  DesignModeWrapper.tsx  LoginScreen.tsx  POSClient.tsx  PasswordSetupScreen.tsx  PaymentModal.tsx  ProductCard.tsx  SettingsSetup.tsx  (+5 more)
(+177 files in other folders)
