[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }

[dependencies]
serde_json = "^1.0"
serde = { version = "^1.0", features = ["derive"] }
log = "^0.4"
tauri = { version = "^2.10.2", features = ["protocol-asset"] }
tauri-plugin-log = "^2"
tauri-plugin-dialog = "^2"
database = { path = "database" }
export_lib = { path = "export_lib" }
chrono = { version = "^0.4", features = ["serde"] } # For date handling
diesel = { version = "^2.3.6", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
directories = "6.0.0"
image_lib = { path = "image_lib" }
tauri-plugin-fs = "2.4.5"
