[package]
name = "database"
version = "0.1.0"
edition = "2024"


[dependencies]
chrono = "0.4.42"
diesel = { version = "2.3.6", features = ["sqlite-bundled"] }
serde = { version = "1.0", features = ["derive"] }
dotenvy = "0.15"
diesel_migrations = "2.2.0"
directories = "6.0.0"
# libsqlite3-sys = { version = "0.36.0" , feature = ["bundled"] }

[dev-dependencies]
# Required to run migrations in test mode
