[package]
name = "database"
version = "0.1.1"
edition = "2024"


[dependencies]
chrono = "0.4.42"
diesel = { version = "^2.3.6", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
diesel_migrations = "2.2.0"
directories = "6.0.0"
libsqlite3-sys = { version = "0.35.0", features = ["bundled-sqlcipher"] }
serde_json = "1.0.149"
[dev-dependencies]
# Required to run migrations in test mode
